# whygraph

./: .dockerignore  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  docker-compose.example.yml  hatch_build.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json  v1-plan.md  v1.1-plan.md  whygraph.example.toml  whygraph.toml
.claude/: settings.local.json
.claude-plugin/: marketplace.json
.github/workflows/: cd-deploy-whygraph.yml  (+4 more)
docs/: index.md  roadmap.md  squash-merge-recovery-plan.md
scripts/: dump-session.py  install.sh
src/: config.ts  index.ts  install.ts
tests/: conftest.py  test_analyze_backfill.py  test_analyze_diff_split.py  test_analyze_llm_descriptor.py  test_analyze_prompt.py  test_analyze_rationale_generator.py  test_assets.py  test_backend.py  test_cli_analyze.py  test_cli_hooks.py  test_cli_init_interactive.py  test_cli_scan_no_llm_descriptions.py  test_cli_scan_phases.py  test_cli_scan_provider.py  test_cli_scan_skip_analyze.py  test_cochange.py  test_codegraph_bootstrap.py  test_codegraph_crawler.py  test_config.py  test_core_config_analyze.py  test_core_config_logging.py  test_core_config_rationale.py  test_core_config_scaffold.py  test_core_config_scan.py  test_core_gitignore.py  test_core_logger_file.py  test_db.py  test_db_plumbing.py  test_evidence_git.py  test_evidence_github.py  test_evidence_service.py  test_git_crawler.py  test_init.py  test_init_agents.py  test_init_clients.py  test_install_cmd.py  test_llm_claude_cli.py  test_llm_sdk.py  test_llm_subprocess.py  test_markdown_formatters.py  (+50 more)
(+271 files in other folders)
