[project]
name = "whygraph"
version = "0.1.0"
description = "Rationale layer over CodeGraph — explains why code exists, not just what it does."
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2",
    "click>=8.1",
    "pydantic>=2",
    "anthropic>=0.40",
]

[project.scripts]
whygraph = "whygraph.cli:main"
whygraph-mcp = "whygraph.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whygraph"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8"]
