[project]
name = "whygraph"
version = "0.1.0"
description = "Rationale layer over CodeGraph — explains why code exists, not just what it does."
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2",
    "click>=8.1",
    "rich>=13",
    "scikit-learn>=1.3",
    "sqlmodel>=0.0.22",
    "alembic>=1.13,<2",
    "anthropic>=0.40",
    "openai>=1.40",
    "ollama>=0.3",
    "tomli-w>=1.0",
]

[project.scripts]
whygraph = "whygraph.cli:main"
whygraph-mcp = "whygraph.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whygraph"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8"]
